--- a/ParseDev.ipynb
+++ b/ParseDev.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "rootDir = 'D:\\\\RJ\\\\UCI\\\\Ralph School\\\\2023 Spring\\\\CS 121\\\\Assignments\\\\.vscode\\\\Res\\\\DEV'\n",
-    "rootDir += '\\\\aiclub_ics_uci_edu'\n",
+    "rootDir += '\\\\alderis_ics_uci_edu'\n",
     "\n",
     "jsonFiles = []\n",
     "for root, dirs, files in os.walk(rootDir):\n",
